fix footer and side scrollbar on chrome
- update background

--- a/ui/src/assets/styles/global.scss
+++ b/ui/src/assets/styles/global.scss
@@ -1,17 +1,29 @@
 @import "./colors";
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+
   background: url('/assets/img/sg2-bg-grad.jpg') center top / cover no-repeat;
   background-attachment: fixed;
 
-  ::-webkit-scrollbar {
-    display: none;
+  color: #fff;
+
+  a {
+    cursor: pointer;
+
+    &, &:visited{
+      color: inherit;
+      text-decoration: none;
+    }
   }
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 h1 {
